fix layout bug

--- a/style.css
+++ b/style.css
@@ -11,6 +11,16 @@
   background: #fbfef9;
 }
 
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.content {
+  flex: 1;
+}
+
 .title {
   font-size: 5vw;
   font-weight: 700;
